[gd_scene load_steps=4 format=3 uid="uid://dewqdkho888hu"]

[ext_resource type="Script" path="res://objects/jericho_bullet/jericho_bullet.gd" id="1_064lt"]
[ext_resource type="SpriteFrames" uid="uid://d27mn8368fubp" path="res://particles/bullet_frames.tres" id="2_gvrw3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jey2d"]
size = Vector2(26, 26)

[node name="Bullet" type="Node2D"]
script = ExtResource("1_064lt")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_gvrw3")
autoplay = "default"

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_jey2d")

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
